--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   border-radius: 10px;
   padding-bottom: 32px;
   box-shadow: 2px 2px 10px 10px #bcbcbc;
+  margin-top: 50px;
 }
 
 .important-btn {
